.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0b1 - Unreleased
------------------

- Deprecate the portlets_fetcher and macro_renderer templates.
  [davisagli]

- Clean up various HTML comments that were being emitted unnecessarily.
  [davisagli]

- On the Zope overview screen, make sure the user is authenticated at the Zope
  root before sending them to the upgrade view for a Plone site, when the Upgrade
  button is clicked.  This closes http://dev.plone.org/plone/ticket/10154.
  [davisagli]

- Increased maximum length of the sortable_title index from 40 to 70 characters
  to match truncation rules of most search engines. This closes
  http://dev.plone.org/plone/ticket/10170.
  [hannosch]

- Restrict manage_options on the catalog to supported and useful options.
  [hannosch]

- Re-factored all templates to follow the recent markup conventions.
  References http://dev.plone.org/plone/ticket/9981
  [spliter]

- Register common CSS resources as blank files here. Other themes are
  supposed to override them to style the site appropiately.
  Refs http://dev.plone.org/plone/ticket/9988.
  [dukebody]

- Updated markup for kss_generic_macros and made main_template to use that
  as the default generator for titles and descriptions.
  [spliter]

- Cache the Plone expression context in the _plone_ec_cache attribute of the
  request, rather than _ec_cache, to avoid accidentally getting a plain CMF
  expression context if that's the first sort that was fetched.
  [davisagli]

- Update profile version, so we can register new upgrade steps.
  [hannosch]

- Fix portal_factory to not destroy sub-path traversal. For example, a view
  that implements IPublishTraverse would previously not see the traversal
  sub-path if invoked on an item being edited in the portal_factory.
  [optilude]

4.0a4 - 2010-02-01
------------------
