@@ -1,24 +1,26 @@
 Browser tests
 =============
 
-  Test for "template id" in <body> tag. See ticket #9111
+Test for "template id" in <body> tag. See tickets #9111/#8777
 
     >>> from Products.Five.testbrowser import Browser
     >>> browser = Browser()
     >>> browser.open('http://nohost/plone/front-page')
     >>> browser.contents
-    '...<body class="section-front-page template-document_view"...'
+    '...<body class="template-document_view portaltype-document section-front-page"...'
     >>> browser.open('http://nohost/plone/news')
     >>> browser.contents
-    '...<body class="section-news template-folder_summary_view"...'
+    '...<body class="template-folder_summary_view portaltype-topic section-news"...'
 
-    Login 
+Login 
+
     >>> browser.getLink('Log in').click()
     >>> browser.getControl('Login Name').value = 'test_user_1_'
     >>> browser.getControl('Password').value = 'secret'
     >>> browser.getControl('Log in').click()
 
-    Test explicit browser view 
+Test explicit browser view 
+
     >>> browser.open('http://nohost/plone/@@dashboard')
     >>> browser.contents
-    '...<body class="template-dashboard"...'
+    '...<body class="template-dashboard portaltype-plone-site"...'
